--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.20",
     "@types/uuid": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.5",
     "react-scripts": "3.4.1",
+    "redux": "^4.1.1",
     "styled-components": "^5.3.1",
     "typescript": "~3.7.2",
     "uuid": "^8.3.2"
