--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.20",
     "@types/uuid": "^7.0.3",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.6",
